[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Crimson_Bubble_logo_branco.png" type="Texture" id=1]
[ext_resource path="res://Assets/fontes/Newsreader font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/220 Sem Título_20250125223420.png" type="Texture" id=3]
[ext_resource path="res://Cenas/MenuController.gd" type="Script" id=4]
[ext_resource path="res://Assets/sons/arcadia só piano.mp3" type="AudioStream" id=5]

[node name="MainMenuPrincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00404, 1.01029 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -430.401
margin_top = 13.8574
margin_right = 3147.6
margin_bottom = 2146.86
rect_scale = Vector2( 0.115383, 0.129207 )

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer"]
margin_right = 3578.0
margin_bottom = 2133.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -227.0
margin_top = 6.0
margin_right = -34.0
margin_bottom = 324.0
rect_scale = Vector2( 0.817228, 0.868201 )
custom_constants/separation = 30

[node name="IniciarButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.74902, 0.0862745, 0.301961, 1 )
margin_right = 193.0
margin_bottom = 57.0
mouse_default_cursor_shape = 3
size_flags_stretch_ratio = 1.47
custom_colors/icon_color_pressed = Color( 0.439216, 0.105882, 0.843137, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Iniciar"

[node name="ControlesButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.74902, 0.0862745, 0.301961, 1 )
margin_top = 87.0
margin_right = 193.0
margin_bottom = 144.0
custom_colors/icon_color_pressed = Color( 0.439216, 0.105882, 0.843137, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Controles"

[node name="CreditosButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.74902, 0.0862745, 0.301961, 1 )
margin_top = 174.0
margin_right = 193.0
margin_bottom = 231.0
custom_colors/icon_color_pressed = Color( 0.439216, 0.105882, 0.843137, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Créditos"

[node name="SairButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.74902, 0.0862745, 0.301961, 1 )
margin_top = 261.0
margin_right = 193.0
margin_bottom = 318.0
custom_colors/icon_color_pressed = Color( 0.439216, 0.105882, 0.843137, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Sair"

[node name="Spatial" type="Spatial" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
